[package]
name = "oxygen"
version = "0.1.0"
authors = ["Luracasmus"]
edition = "2021"
rust-version = "1.84.0"
description = "Convenient Rust Crate package manager using Rustup and Cargo"
keywords = ["crate", "install", "package", "update"]
categories = ["command-line-utilities"]

[dependencies]
ron = "0.9.0-alpha.0"
serde = { version = "1.0", features = ["derive"] }
windows = { version = "0.59.0", features = ["Win32_System_Console"] }

[build-dependencies]
embed-manifest = "1.4.0"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = "symbols"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
mem_forget = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
rc_mutex = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"

cargo_common_metadata = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
integer_division = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
